# mulle-cosmopolitan

./: .gitignore  .touch  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  package.json
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-project.sh
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-extension.sh
cmake/reflect/: _Dependencies.cmake  _Sources.cmake
cmake/share/: DependenciesAndLibraries.cmake  IDESupport.cmake  Library.cmake
craftinfo/cosmopolitan-craftinfo/: CMakeLists.txt  README.md
craftinfo/cosmopolitan-craftinfo/definition/set/: BUILD_SCRIPT
demo-c/: CMakeLists.txt  README.md  cas-manual  cas.dbg  fuck  main-cas.d
demo-c/cmake/reflect/: README.md  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
demo-c/cmake/share/: CMakeTweaksC.cmake  CreateLoaderIncObjC.cmake  DefineLoaderIncObjC.cmake  Environment.cmake  Executable.cmake  ExecutableAux.cmake  Framework.cmake  InstallRpath.cmake  PostStandaloneAuxC.cmake  StandaloneC.cmake
demo-c/src/: demo-c-version.h  main-cas.c  main-demo1.c
demo-c/src/generic/: include-private.h  include.h
demo-c/src/reflect/: README.md  _demo-c-include-private.h  _demo-c-include.h  _demo-c-provide.h
demo-objc/: CMakeLists.txt  README.md  sort
demo-objc/cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
demo-objc/cmake/share/: AllLoadC.cmake  CMakeTweaksC.cmake  CreateLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  Files.cmake  (+2 more)
demo-objc/src/: demo-objc-version.h  main.m
(+23 files in other folders)
